--- a/HTML/chat.html
+++ b/HTML/chat.html
@@ -3,8 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>Chat</title>
+    <link rel="stylesheet" href="/css/navStyle.css">
   </head>
   <body>
+    <div class="container">
+      <nav class="nav">
+
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="/todo" target="_blank" class="nav-link">Todo List</a>
+          </li>
+          <li class="nav-item">
+            <a href="/text" target="_blank" class="nav-link">Text-Editor</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div>
       <iframe src="https://chatcafelogic.web.app/" width="100%" height="600vh"></iframe>
     </div>
